--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
   <title>RAIN - Rights for All Immigrants Network</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="logo.png" type="image/png" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>RAIN</h1>
+      <img src="logo.png" alt="RAIN Logo" class="logo" />
       <nav>
         <ul>
-          <li><a href="#mission">Mission</a></li>
-          <li><a href="#resources">Resources</a></li>
-          <li><a href="#volunteer">Volunteer</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="weeklyposts.html">Weekly Posts</a></li>
+          <li><a href="policies.html">Policies & Laws</a></li>
+          <li><a href="about.html">About Us</a></li>
         </ul>
       </nav>
     </div>
@@ -39,14 +40,7 @@
 
   <section id="resources" class="content alt">
     <div class="container">
-      <h3>Immigrant Resources</h3>
-      <ul>
-        <li>Updated immigration policies & regulation summaries</li>
-        <li>Local grants, housing, and financial aid options</li>
-        <li>Free legal consultation links and campus support resources</li>
-      </ul>
-    </div>
-  </section>
+      
 
   <section id="volunteer" class="content">
     <div class="container">
@@ -56,13 +50,7 @@
     </div>
   </section>
 
-  <section id="contact" class="content alt">
-    <div class="container">
-      <h3>Contact Us</h3>
-      <p>Email: rainclub@email.com</p>
-      <p>Instagram: @rainforimmigrants</p>
-    </div>
-  </section>
+ 
 
   <footer>
     <div class="container">
