--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       <section id="contact" class="content alt">
         <div class="container">
           <h3>Contact Us</h3>
-          <p>Email: rainclub@email.com</p>
+          <p>Email: help@rightsforallimmigrants.org</p>
           <p>Instagram: @rainforimmigrants</p>
         </div>
       </section>
