--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="RAIN - Rights for All Immigrants Network: Empowering immigrants with resources, legal rights, and student involvement." />
   <title>RAIN - Rights for All Immigrants Network</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -12,12 +13,12 @@
   <header>
     <div class="container">
       <img src="logo.png" alt="RAIN Logo" class="logo" />
-      <nav>
+      <nav aria-label="Main Navigation">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="weeklyposts.html">Weekly Posts</a></li>
-          <li><a href="policies.html">Policies & Laws</a></li>
-          <li><a href="about.html">About Us</a></li>
+          <li><a href="index.html" title="Go to Home Page">Home</a></li>
+          <li><a href="weeklyposts.html" title="Read Weekly Posts">Weekly Posts</a></li>
+          <li><a href="policies.html" title="Learn about Policies and Laws">Policies & Laws</a></li>
+          <li><a href="about.html" title="Learn About Us">About Us</a></li>
         </ul>
       </nav>
     </div>
@@ -40,7 +41,11 @@
 
   <section id="resources" class="content alt">
     <div class="container">
-      
+      <h3>Resources</h3>
+      <p>Explore our curated list of resources, including legal aid, community support, and educational materials to help immigrants navigate their journey.</p>
+      <a href="resources.html" class="btn">View Resources</a>
+    </div>
+  </section>
 
   <section id="volunteer" class="content">
     <div class="container">
@@ -50,12 +55,19 @@
     </div>
   </section>
 
- 
+  <button id="back-to-top" class="btn" onclick="scrollToTop()">Back to Top</button>
 
   <footer>
     <div class="container">
       <p>&copy; 2025 Rights for All Immigrants Network. All rights reserved.</p>
     </div>
   </footer>
+
+  <script>
+    // Scroll to top functionality
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
 </body>
 </html>
