--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="index.html" title="Go to Home Page">Home</a></li>
           <li><a href="weeklyposts.html" title="Read Weekly Posts">Weekly Posts</a></li>
           <li><a href="policies.html" title="Learn about Policies and Laws">Policies & Laws</a></li>
-          <li><a href="about.html" title="Learn About Us">About Us</a></li>
+          <li><a href="about.html" title="Contact Us">Contact Us</a></li>
         </ul>
       </nav>
     </div>
@@ -51,11 +51,12 @@
     <div class="container">
       <h3>Get Involved</h3>
       <p>We're recruiting students from all backgrounds to join our mission. Whether you’re interested in tech, research, or advocacy, there’s a role for you.</p>
-      <a href="https://forms.gle/your-form-link" target="_blank" class="btn">Sign Up to Volunteer</a>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfDN8zZXjNox4WvVQLljnYN8b4D2rkD0gYE-l3_US8URFyJug/viewform?usp=sharing" target="_blank" class="btn">Sign Up to Volunteer</a>
     </div>
   </section>
 
   <button id="back-to-top" class="btn" onclick="scrollToTop()">Back to Top</button>
+
 
   <footer>
     <div class="container">
